# music-intel

./: .env.example  .gitignore  CLAUDE.md  README.md  playwright.config.py  pyproject.toml
.github/workflows/: ci.yml  on-demand-review.yml  pr-automation.yml
src/music_intel/: app.py  models.py
src/music_intel/ai/: analyst.py  providers.py
src/music_intel/pipeline/: ingest.py  validate.py
src/music_intel/sources/: discogs.py  lastfm.py  musicbrainz.py  spotify.py
src/music_intel/storage/: db.py
tests/: conftest.py
tests/e2e/: test_app.py
tests/integration/: test_pipeline.py
tests/unit/: test_normalize.py  test_validate.py
