[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-intel"
version = "0.1.0"
description = "Multi-source music intelligence — aggregate Spotify, MusicBrainz, Last.fm & Discogs into a local DuckDB database with AI-powered analysis"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "gradio>=5.0.0",
    "litellm>=1.50.0",
    "spotipy>=2.24.0",
    "musicbrainzngs>=0.7.1",
    "pylast>=5.3.0",
    "discogs-client>=2.3.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "playwright>=1.47.0",
    "pytest-playwright>=0.5.0",
]

[project.scripts]
music-intel = "music_intel.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/music_intel"]
